--- a/Capstone_Project/plants/templates/plants/food_data.html
+++ b/Capstone_Project/plants/templates/plants/food_data.html
@@ -7,7 +7,7 @@
         <h3>MEMBER HOME</h3>
         <h3><a href="{% url 'plants:dashboard' %}">DASHBOARD</a></h3> 
         <h3><a href="{% url 'profile' %}">GO HOME</a></h3>
-        <h3><a href="{% url 'logout_user' %}">logout</a> </h3>
+        <h3 style="float:right"><a href="{% url 'logout_user' %}">logout</a> </h3>
     </div>
 
     <div class="title">
