--- a/Capstone_Project/quizGame/templates/quizGame/index.html
+++ b/Capstone_Project/quizGame/templates/quizGame/index.html
@@ -30,7 +30,7 @@
   </div>
 
     <div class="header" id="myHeader">
-      <h1>Header: {{ message }}</h1>
+      <h1>GARDEN LIGHT</h1>
         <div class="topNav">
             <nav class="navBar">
               <a href="{% url 'plants:index' %}">Home</a>
