--- a/Capstone_Project/users/templates/users/profile.html
+++ b/Capstone_Project/users/templates/users/profile.html
@@ -12,7 +12,7 @@
     
     <h1>HELLO, {{ user }}!</h1>
     <hr>
-    <div class="content">
+    <div class="content1">
         <section class="options">
             <p>Wanna Play?</p>
             <a href="{% url 'quizGame:index' %}">CLICK ME</a>
