--- a/Capstone_Project/quizGame/static/quizGame/style.css
+++ b/Capstone_Project/quizGame/static/quizGame/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+
 /* Flashcard Styling */
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Balsamiq Sans', cursive;
 }
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+
 
 html,
 body {
