--- a/Capstone_Project/users/templates/users/register.html
+++ b/Capstone_Project/users/templates/users/register.html
@@ -12,20 +12,24 @@
             {% if error %}
             {{error}}
             {% endif %}
-            <h3>Join Us</h3>
-            <h5>Create Your Account, It's Free & Educational.</h5>
+            <div class="section3">
+                <h3>Join Us</h3>
+                <h5>Create Your Account, It's Free & Educational.</h5>   
+            </div>
+            
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
                 <label for="username">Username</label>
-                <input type="text" name="username" placeholder="Username: " value="{{username}}" onfocus="this.value=''">
+                <input class="registerBtn" type="text" name="username" placeholder="Username: " value="{{username}}" onfocus="this.value=''">
                 <label for="email">Email</label>
-                <input type="email" name="email" placeholder="Email: " value="{{email}}" onfocus="this.value=''">
+                <input class="registerBtn" type="email" name="email" placeholder="Email: " value="{{email}}" onfocus="this.value=''">
                 <label for="pword">Password</label>
-                <input type="password" name="password" placeholder="Password: " onfocus="this.value=''">
-                <input type="password" name="confirm" placeholder="Confirm Password: " onfocus="this.value=''">
-                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-                <input type="submit" value="Register">
-            </form>    
+                <input class="registerBtn" type="password" name="password" placeholder="Password: " onfocus="this.value=''">
+                <input class="registerBtn" type="password" name="confirm" placeholder="Confirm Password: " onfocus="this.value=''">
+                <p>By creating an account you agree to our <a href="#" style="color:#4CAF50">Terms & Privacy</a>.</p>
+                <input class="registerBtn2" type="submit" value="Register">
+                <input class="registerBtn2" type="reset" value="Reset">   
+            </form>   
         </section>
     </div>   
 </body>
