--- a/Capstone_Project/plants/templates/plants/base.html
+++ b/Capstone_Project/plants/templates/plants/base.html
@@ -37,6 +37,9 @@
             </nav>
         </div>
     </div>
+    <!-- <footer class="footer">
+
+    </footer> -->
     {% block plants %}
     {% endblock %}
 </body>
