--- a/Capstone_Project/users/static/users/style.css
+++ b/Capstone_Project/users/static/users/style.css
@@ -7,6 +7,23 @@
   font-family: 'Balsamiq Sans', cursive;
 }
 
+/* TOP NAAAAV Styling */
+.stickyTopNav {
+  overflow: hidden;
+  background-color: #668859;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+.stickyTopNav > a {
+  text-decoration: none;
+  color: #E9E8E2 ;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
 body{
   background-color: #E9E8E2;
   color: #56523E;
@@ -17,6 +34,28 @@ body{
   font-family: 'Balsamiq Sans', cursive;
   text-decoration: none;
   text-decoration-color: #668859;
+}
+
+/* Banner image styling */
+.bannerImage{
+  height: 35vh;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 0.5em;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("../users/images/banner_food_image.jpg")
+}
+
+.bannerImage2{
+  text-align: center;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:whitesmoke;
 }
 
 /* Header Styling */
@@ -89,8 +128,6 @@ body{
   font-size: 30px;
 }
 
-
-
 .content {
   width: 35vw;
   height: 40vh;
@@ -108,6 +145,44 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+}
+
+/* CONTENT STYLING */
+.welcome > h1 {
+  padding-top: 1em;
+  text-align: center;
+  font-size: 35px;
+  text-transform: uppercase;
+}
+
+.content1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.options {
+  background-color: #540d6e;
+  width: 100vh;
+  min-height: 50vh;
+  margin: 50px;
+  color: whitesmoke;
+  text-align: center;
+  line-height: 175px;
+  font-size: 45px;
+  background: linear-gradient(
+    to right bottom,
+    rgba(204, 48, 243, 0.7),
+    rgba(255, 255, 255, 0.3)
+  );
+}
+ 
+.options > a {
+  text-decoration: none; 
+}
+
+.options > img {
+  overflow: hidden;
 }
 
 /* SEED STYLING */
@@ -197,7 +272,6 @@ form {
   }
   
   .options {
-    border-radius: 1.2em;
     background-color: #540d6e;
     width: 100vh;
     min-height: 50vh;
