--- a/Capstone_Project/users/templates/users/base.html
+++ b/Capstone_Project/users/templates/users/base.html
@@ -25,7 +25,7 @@
 <body>
     <div class="header" id="myHeader">
         <div class="headerTitle">
-            <h1>GARDEN LIGHT</h1>   
+            {% block title %}<h1>GARDEN LIGHT</h1>{% endblock %}
         </div>
         <div class="topNav">
             <nav class="navBar">
